# namingify

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod  go_gen_pb.sh  run.sh
helloworld/java/com/google/elemental2/samples/helloworld/: BUILD  HelloWorld.java  app.js
math/newton/: BUILD.bazel  main.cc
naming_client/: BUILD.bazel  main.go
naming_server/: BUILD.bazel  main.go  server.cc  tables.h
proto/naming/: BUILD.bazel  naming.proto
simple_concurency_cc/: BUILD.bazel  main.cc  shared.h  shm_client.c  shm_server.c  sock_client.cc  sock_server.cc
simple_concurency_go/: BUILD.bazel  README.md  main.go
simple_ds/linked_list/: BUILD.bazel  main.go
web_server/: BUILD.bazel  main.go
web_server/templates/: index.html
