# gazelle:prefix github.com/lemito/namingify
# gazelle:exclude proto/naming/naming.pb.go proto/naming/naming_grpc.go

load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")

gazelle_binary(
    name = "gazelle_cc",
    languages = [
        "@gazelle//language/proto",
        "@gazelle_cc//language/cc",
    ],
)

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_cc",
)
