module(name = "namingify")

bazel_dep(name = "rules_go", version = "0.52.0")
bazel_dep(name = "gazelle", version = "0.42.0")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "protobuf", version = "29.0", repo_name = "com_google_protobuf")
bazel_dep(name = "grpc", version = "1.65.0")
bazel_dep(name = "abseil-cpp", version = "20250512.0")
bazel_dep(name = "rules_proto_grpc", version = "5.1.0")
bazel_dep(name = "rules_proto_grpc_cpp", version = "5.1.0")
bazel_dep(name = "toolchains_protoc", version = "0.4.1")

protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
protoc.toolchain(
    google_protobuf = "com_google_protobuf",
    version = "v29.0",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.2")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
)
