"""
"""

module(name = "namingify")

bazel_dep(name = "rules_go", version = "0.52.0")
bazel_dep(name = "gazelle", version = "0.42.0")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "protobuf", version = "29.0", repo_name = "com_google_protobuf")
bazel_dep(name = "grpc", version = "1.65.0")
bazel_dep(name = "abseil-cpp", version = "20250512.0")
bazel_dep(name = "rules_proto_grpc", version = "5.1.0")
bazel_dep(name = "rules_proto_grpc_cpp", version = "5.1.0")
bazel_dep(name = "toolchains_protoc", version = "0.4.1")
bazel_dep(name = "com_google_elemental2")

# j2cl is not available in BCR.
archive_override(
    module_name = "com_google_elemental2",
    strip_prefix = "elemental2-master",
    urls = ["https://github.com/google/elemental2/archive/master.zip"],
)

bazel_dep(name = "com_google_j2cl")

# j2cl is not available in BCR.
archive_override(
    module_name = "com_google_j2cl",
    strip_prefix = "j2cl-master",
    urls = ["https://github.com/google/j2cl/archive/master.zip"],
)

bazel_dep(name = "com_google_jsinterop_generator")

# jsinterop-generator is not available in BCR.
archive_override(
    module_name = "com_google_jsinterop_generator",
    strip_prefix = "jsinterop-generator-master",
    urls = ["https://github.com/google/jsinterop-generator/archive/master.zip"],
)

bazel_dep(name = "com_google_jsinterop_base")

# jsinterop-base is not available in BCR.
archive_override(
    module_name = "com_google_jsinterop_base",
    strip_prefix = "jsinterop-base-master",
    urls = ["https://github.com/google/jsinterop-base/archive/master.zip"],
)

bazel_dep(
    name = "google_bazel_common",
    version = "0.0.1",
)

# rules_closure is not available in BCR.
git_override(
    module_name = "io_bazel_rules_closure",
    commit = "790a1bd79cde595a5d296963a78d344681ff245c",
    remote = "https://github.com/bazelbuild/rules_closure",
)

# rules_webtesting is not available in BCR.
git_override(
    module_name = "rules_webtesting",
    commit = "7a1c88f61e35ee5ce0892ae24e2aa2a3106cbfed",
    remote = "https://github.com/bazelbuild/rules_webtesting",
)

git_override(
    module_name = "rules_scala",
    commit = "219e63983e8e483e66ebf70372969ba227382001",
    remote = "https://github.com/mbland/rules_scala",
)

protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
protoc.toolchain(
    google_protobuf = "com_google_protobuf",
    version = "v29.0",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.2")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_golang_groupcache",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
)
