load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "naming_client_lib",
    srcs = ["main.go"],
    importpath = "github.com/lemito/namingify/naming_client",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/naming",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)
