load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "naming_server_lib",
    srcs = ["main.go"],
    importpath = "github.com/lemito/namingify/naming_server",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/naming",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_binary(
    name = "naming_server",
    embed = [":naming_server_lib"],
    visibility = ["//visibility:public"],
)
