load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "naming_server_lib",
    srcs = ["main.go"],
    importpath = "github.com/lemito/namingify/naming_server",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/naming",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_binary(
    name = "naming_server",
    embed = [":naming_server_lib"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "tables",
    srcs = ["tables.cc"],
    hdrs = ["tables.h"],
    visibility = ["//visibility:public"],
    deps = ["@abseil-cpp//absl/container:flat_hash_map"],
)

cc_binary(
    name = "naming_cc_server",
    srcs = ["server.cc"],
    visibility = ["//visibility:public"],
    deps = [
        ":tables",
        "//proto/naming:naming_cc_grpc_compile",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/strings:str_format",
        "@grpc//:grpc++",
        "@grpc//:grpc++_reflection",
    ],
)
