load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "simple_concurency_go_lib",
    srcs = ["main.go"],
    importpath = "github.com/lemito/namingify/simple_concurency_go",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "simple_concurency_go",
    embed = [":simple_concurency_go_lib"],
    visibility = ["//visibility:public"],
)
