load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "web_server_lib",
    srcs = ["main.go"],
    importpath = "github.com/lemito/namingify/web_server",
    visibility = ["//visibility:public"],
    deps = [
        "//naming_client:naming_client_lib",
        "@com_github_golang_groupcache//:groupcache",
    ],
)

go_binary(
    name = "web_server",
    embed = [":web_server_lib"],
    visibility = ["//visibility:public"],
)
