# gazelle:ignore *.pb.go

load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc_cpp//:defs.bzl", "cc_proto_library", "cc_grpc_library")

proto_library(
    name = "naming_proto",
    srcs = ["naming.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "naming_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "github.com/lemito/namingify/proto/naming",
    proto = ":naming_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "naming",
    embed = [":naming_go_proto"],
    importpath = "github.com/lemito/namingify/proto/naming",
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "naming_cc_grpc",
    protos = [":naming_proto"],
    visibility = ["//visibility:public"],
)

cc_grpc_library(
    name = "naming_cc_grpc_compile",
    protos = [":naming_proto"],    visibility = ["//visibility:public"],

)